feat(delivery): implement tenant-scoped delivery orders